--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
   get: ^4.6.1
+  responsive_framework: ^0.1.7
 
 dev_dependencies:
   flutter_test:
