--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^1.0.3
   get: ^4.6.1
   responsive_framework: ^0.1.7
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
