--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.6.1
   responsive_framework: ^0.1.7
   carousel_slider: ^4.0.0
+  sticky_headers: ^0.2.0
 
 dev_dependencies:
   flutter_test:
