--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   responsive_framework: ^0.1.7
   carousel_slider: ^4.0.0
   google_fonts: ^2.3.1
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
