--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 
   google_fonts: ^2.3.1
   font_awesome_flutter: ^10.1.0
+  smooth_scroll_web: ^0.0.4
 
 dev_dependencies:
   flutter_test:
