--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   smooth_scroll_web: ^0.0.4
   smooth_page_indicator: ^1.0.0+2
+  sticky_headers: ^0.2.0
 
 dev_dependencies:
   flutter_test:
